[tool.poetry]
name = "client-py"
version = "0.1.0"
description = ""
authors = ["Jakob Auer <jakob@auer.tech>"]

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.11.2"
pip = ">=1.4"
setuptools = ">=0.9"
wheel = ">=0.21"
bumpversion = ">=0.3"
isodate = ">=0.5"
requests = ">=2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
